# constraint_solver

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  README.rst  constraint_solver.py  pyproject.toml
amp_constraint_solver/: __init__.py  builtin_constraints.py  constraint_solver.py  test_constraint_solver.py
constraint_solver/: constraint_solver.py  test_constraint_solver.py
docs/: .buildinfo  amp_constraint_solver.html  genindex.html  index.html  license.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/_modules/: index.html  typing.html
docs/_modules/amp_constraint_solver/: builtin_constraints.html  constraint_solver.html  test_constraint_solver.html
docs/_sources/: amp_constraint_solver.rst.txt  index.rst.txt  modules.rst.txt
sphinx/source/: amp_constraint_solver.rst  conf.py  index.rst  readme.rst
