[tool.poetry]
name = "constraint_solver"
version = "0.3.0"
description = "A domain reduction constraint solver."
authors = ["Adam Pegman <adam:pegman.space>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.5"

[tool.poetry.dev-dependencies]
mypy = "^0.650.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
