[tool.poetry]
name = "amp_constraint_solver"
version = "0.4.0" # Make sure to update this in __init__.py as well.
description = "A domain reduction constraint solver."
authors = ["Adam Pegman <adam:pegman.space>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.0"

[tool.poetry.dev-dependencies]
mypy = "^0.650.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
sphinx = "^1.8"
sphinx-autodoc-typehints = "^1.6"
sphinx_rtd_theme = "^0.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
